# pytest-xvfb-test

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/myproject/: main.py
tests/: test_main.py
